Add projects, gallery, reduce number of components

--- a/index.html
+++ b/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+    
+    <link rel="icon" type="image/png" href="resx/favicon128.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="resx/favicon32.png"/>
+    <link rel="icon" type="image/png" sizes="64x64" href="resx/favicon64.png"/>
+    <link rel="icon" type="image/png" sizes="128x128" href="resx/favicon128.png"/>
+    
+    <meta name="msapplication-TileColor" content="#333333">
+    <meta name="theme-color" content="#333333"/>
+    <meta property="og:title" content="sleepycrow's Portfolio"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://sleepycrow.one/"/>
+    <meta property="og:image" content="https://sleepycrow.one/resx/bg.jpg"/>
+
+    <title>sleepycrow's Portfolio</title>
   </head>
   <body>
-    <div id="app">
-      <div></div>
-    </div>
+    <noscript>This app requires JavaScript.</noscript>
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
